# hachimi-world-server

./: .dockerignore  .drone.yaml  .gitignore  Cargo.toml  Dockerfile
.github/: CONTRIBUTING.md
.sqlx/: query-0078e78c70b86d9af53a16340b6f2149c9e5e503e9fe3868736dbc7bd80c31ae.json  query-03031c37a36d398a50971a29b8ddcf5faac356fe51b5e49ba5b71ca617ac0e50.json  query-05ff732d59217be95edf4e33dd38b59e871b15b71154f97b810745ddf5700f76.json  query-06e4292cd0c2638decb47f86f6d6632b4959696f9ac0d7f8b432c8d5724c73a7.json  query-087da75599a87ff0546800b0e0935bf3f83ec691f96b9631a071bffe9396b8d7.json  query-09588611968b6df3ac6592c7f50765408e6c31f64d5aa2d8ffca36627ff9df86.json  query-096ea3c5df6521ee3292137d5c4fb220bc11db0f14f60762b71811c663027a55.json  query-09d681c6fe3140299f86c3660b9c67d6907fc7ccbfcd6cba7d1fef25fa760de0.json  query-0abc26ea955a9e0541784d46ab9d7c64af0c7926b9b3c5ee95394ddb001ed650.json  query-0ce3c0ac8dd1112a0d7bfc8db8a162695eb4c3afd0fe2b615140551b6492d5f1.json  query-100ada5c6c7d3a5ae7b12010629b2cf84a99dc82ea95632e501ef287f078fad9.json  query-1055d2f1c61e2c0f4e773509bdb42d878880506724bdd8d6dc190f148a7b9783.json  query-120a4aee25863ddeefd72670d05b092f58445d8b7eef8cb915fd09f1966f1c32.json  query-120afc73ef46b432ec1d5df59a3b99f0690814bf3a1a414d08e619b121b3d4d8.json  query-1405bbd152a1bdd5fecacf00ef65393188d90bf78de4697b44259fbc6d91346f.json  query-165cf3d64c93d543155c78cd60b8e708fbfc65c0cdc532ac7a3734fa1ff57da1.json  query-17307bf073fe0d58e3c317b9c974445b62bdc292e437798da083f7bbe04fe5a9.json  query-186daf51d9aaf6a193b59fae3b207e447b251571c107637b4545e099f752a822.json  query-1a7bcac8f7787ca133b64f0f8e1dca2d4c0384373a3519bd0d541ce326fe15f9.json  query-1dd3d52fa45394f7ae42f82ba871e398a3a10c249163fdc47b65b5047eb14ea2.json  query-1f59a990310ab6ff27fa73188263911e277a13514e6dc564fd04d1a34e9bad04.json  query-208445b5549662f570368a5cc20056f9e8ccd12f9471588b430944f3bc0c4fa9.json  query-21c7eadae8841874e8219ce3a1dd4ba963d95ead447dc83c8fb4d255d846d7d5.json  query-22add31980d88dcb03e1bf57e47daea6a2a40aec16600822582f6770afc04893.json  query-26a8a863cf8d97fdcf5d45042e8b4611e59c46efd162889feaa6555023f3b4f7.json  query-26e71bd80614188cb9c05763e450a31e987c93c52d2208aea9a787fd5295dc54.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-2799f1984c913879bbf5a7cdc5e604e5c32f857af538f0f2c312fd3759194614.json  query-29586dc211648b9fa5b48d3ac41af28ffeabda3bc364f680b8d6da06558fd739.json  query-2c697f63fec3d465573c3fde3c8b11b62a2c5512c213bfd9bb8e5bbc39ba2d1c.json  query-2da3758f768063b0157bf12bba55ea077801e919a6c35839da49007143a5b79e.json  query-3115a9f727b6e6847911358a03d91d4da0714455bcb7ba46cf9c1742e441c722.json  query-3217725f4ec9a5533715e8ae971ce8f1bb376601ec39642e3b0fad7f219920b1.json  query-338a558022822682752ba40e16c9ab2589f8ffab31316b4e3ff5aa575f607319.json  query-33abbfd4b7b44a762667a0eaab1f443556dc4190af2b5bd3da8fa81f402191f4.json  query-3690593a1848c75dc7d062967bdf37e4f9b8a57b530e6bfce6478ac4cf3481c5.json  query-37a8a4acc272c352092646d2f7c01db008b42888062dca47a5140559c72af205.json  query-381c237888daef739d7ea7f70892ff23da92be6c3e387c58f85557b450755b06.json  query-3c09eac17453b74cb08cb7acc850d37e4f36e12447b88192c76311142bcae15d.json  query-3cb4665a5f363528e8c451dd4f82ed7ac47f0c83d1091feddcae601e4cc341f0.json  (+129 more)
.woodpecker/: build-check.yaml  deploy.yaml
config/: config-example.yaml
docker/: docker-compose-example.yaml
migrations/: 20250815123336_initialize.sql  (+16 more)
(+81 files in other folders)
