[package]
name = "hachimi-world-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.16"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower = "0.5.2"
redis = { version = "0.29.1", features = ["connection-manager", "tokio-comp", "aio"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono", "rust_decimal"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
jsonwebtoken = "9.3.0"
urlencoding = "2.1.3"
bcrypt = "0.17.0"
openssl = "0.10.68"
regex = "1.11.1"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4"] }
rand = "0.9.0"
aws-sdk-s3 = "1.96.0"
bytes = "1.10.1"
image = "0.25.6"
hex = "0.4.3"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
mockall = "0.13.0"
lettre = "0.11.18"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
async-backtrace = "0.2.7"
symphonia = { version = "0.5.4", features = ["mp3"] }
symphonia-metadata = "0.5.4"
futures = "0.3.31"
meilisearch-sdk = "0.29.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
serial_test = "3.2.0"
reqwest = "0.12.23"
