[package]
name = "hachimi-world-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tower = "0.5.2"
redis = { version = "1.0.0-rc.2", features = ["connection-manager", "tokio-comp", "aio"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono", "rust_decimal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
jsonwebtoken = "9.3.1"
urlencoding = "2.1.3"
bcrypt = "0.17.1"
openssl = "0.10.73"
regex = "1.11.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4"] }
rand = "0.9.2"
aws-sdk-s3 = "1.103.0"
bytes = "1.10.1"
image = "0.25.6"
hex = "0.4.3"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
mockall = "0.13.1"
lettre = "0.11.18"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
async-backtrace = "0.2.7"
symphonia = { version = "0.5.4", features = ["mp3"] }
symphonia-metadata = "0.5.4"
futures = "0.3.31"
meilisearch-sdk = "0.29.1"
tower-http = { version = "0.6.6", features = ["cors", "request-id", "trace"] }
tokio-stream = "0.1.17"
itertools = "0.14.0"
tower_governor = "0.8.0"
governor = "0.10.1"
url = "2.5.4"
webp = "0.3.1"
askama_escape = "0.13.0"
replaygain = "1.0.1"
chrono-tz = "0.10.4"
serde_urlencoded = "0.7.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
serial_test = "3.2.0"
reqwest = "0.12.23"
